# payment-engine

./: .gitignore  Cargo.toml  LICENSE  README.md  accounts.csv  transactions.csv
src/: adapters.rs  main.rs  models.rs
src/adapters/: cli.rs  csv_parser.rs  output.rs
src/engine/: runner.rs  state.rs
src/models/: account.rs  command.rs  transaction.rs
tests/: integration.rs
tests/data/: chargeback_flow.csv  dispute_flow.csv  duplicate_tx_ids.csv  insufficient_funds.csv  sample_transactions.csv
