[package]
name = "payments_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
csv = "1"
serde = { version = "1.0", features = ["derive"] }
rust_decimal = { version = "1", features = ["serde", "serde-with-str"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"